2010-01-11  Jon Honeycutt  <jhoneycutt@apple.com>

        MSAA: Accessibility role of <select multiple> elements is wrong

        https://bugs.webkit.org/show_bug.cgi?id=33522

        Reviewed by Darin Adler.

        * platform/win/accessibility/multiple-select-element-role-expected.txt: Added.
        * platform/win/accessibility/multiple-select-element-role.html: Added.

2010-01-12  Beth Dakin  <bdakin@apple.com>

        Reviewed by Nikolas Zimmermann.

        Updated results for these tests which just have rounding errors.

        * platform/mac/svg/css/composite-shadow-example-expected.checksum:
        * platform/mac/svg/css/composite-shadow-example-expected.png:
        * platform/mac/svg/css/mask-with-shadow-expected.checksum:
        * platform/mac/svg/css/mask-with-shadow-expected.png:

2010-01-12  Beth Dakin  <bdakin@apple.com>

        This patch changes the name of -webkit-shadow to -webkit-svg-shadow 
        to avoid giving a custom property an overly-general name.
        <rdar://problem/7534590>

        * fast/repaint/moving-shadow-on-container.html:
        * fast/repaint/moving-shadow-on-path.html:
        * platform/gtk/svg/css/getComputedStyle-basic-expected.txt:
        * platform/mac/fast/css/getComputedStyle/computed-style-expected.txt:
        * platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
        * platform/win/fast/css/getComputedStyle/computed-style-expected.txt:
        * platform/win/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
        * svg/css/arrow-with-shadow.svg:
        * svg/css/circle-in-mask-with-shadow.svg:
        * svg/css/clippath-with-shadow.svg:
        * svg/css/composite-shadow-example.html:
        * svg/css/composite-shadow-with-opacity.html:
        * svg/css/getComputedStyle-basic-expected.txt:
        * svg/css/group-with-shadow.svg:
        * svg/css/mask-with-shadow.svg:
        * svg/css/path-with-shadow.svg: