@@ -1,0 +1,5 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderSVGRoot {svg} at (100,100) size 200x200
+    RenderPath {rect} at (100,100) size 200x200 [opacity=0.50] [fill={[type=SOLID] [color=#008000]}] [data="M100.00,100.00 L300.00,100.00 L300.00,300.00 L100.00,300.00 Z"]
