@@ -1,3 +1,15 @@
+2010-01-12  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Fix for https://bugs.webkit.org/show_bug.cgi?id=33550 REGRESSION: -
+        webkit-svg-shadow with opacity still over-clipped
+
+        We need to call inflateForShadow() on the repaintRect before we 
+        clip for opacity or we will over-clip.
+        * rendering/SVGRenderSupport.cpp:
+        (WebCore::SVGRenderBase::prepareToRenderSVGContent):
+
 2010-01-12  Steve Falkenburg  <sfalken@apple.com>
 
         Reviewed by Sam Weinig.
